// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuGroup - JSX label 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4C535B;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.c4:focus {
  box-shadow: 0 0 .25rem 0.125rem #49a9f2;
  outline: none;
}

.c4:active {
  color: #0087e1;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  box-shadow: 0 4px 8px -2px #DEE1E5;
  background-color: white;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1rem;
  position: -webkit-sticky;
  position: sticky;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  top: 0;
  z-index: 1;
}

.c1 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: uppercase;
}

.c3 {
  position: relative;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c3:hover {
  background: #F5F6F7;
  color: #262D33;
}

.c3:hover .c5 {
  color: #262D33;
}

.c3 .c5 {
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c3 .c5 {
  color: #C1C6CC;
}

<div
  className="c0"
>
  <h2
    className="c1 c2"
  >
    <div
      className="c0"
    >
      Questions
    </div>
  </h2>
  <div
    active={false}
    className="c3 c4"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    what?
  </div>
  <div
    active={false}
    className="c3 c4"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    who?
  </div>
  <div
    active={false}
    className="c3 c4"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    where?
  </div>
</div>
`;

exports[`MenuGroup - canActivate 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4C535B;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.c2:focus {
  box-shadow: 0 0 .25rem 0.125rem #49a9f2;
  outline: none;
}

.c2:active {
  color: #0087e1;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  width: 1.5rem;
}

.c1 {
  position: relative;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c1:hover {
  background: #F5F6F7;
  color: #262D33;
}

.c1:hover .c4 {
  color: #262D33;
}

.c1 .c4 {
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c1 .c4 {
  color: #C1C6CC;
}

<div
  className="c0"
>
  <div
    active={false}
    className="c1 c2"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    <div
      className="c3"
    />
    what?
  </div>
  <div
    active={false}
    className="c1 c2"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    <div
      className="c3"
    />
    who?
  </div>
  <div
    active={false}
    className="c1 c2"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    <div
      className="c3"
    />
    where?
  </div>
</div>
`;

exports[`MenuGroup - label 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4C535B;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.c4:focus {
  box-shadow: 0 0 .25rem 0.125rem #49a9f2;
  outline: none;
}

.c4:active {
  color: #0087e1;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  box-shadow: 0 4px 8px -2px #DEE1E5;
  background-color: white;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1rem;
  position: -webkit-sticky;
  position: sticky;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  top: 0;
  z-index: 1;
}

.c1 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: uppercase;
}

.c3 {
  position: relative;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c3:hover {
  background: #F5F6F7;
  color: #262D33;
}

.c3:hover .c5 {
  color: #262D33;
}

.c3 .c5 {
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c3 .c5 {
  color: #C1C6CC;
}

<div
  className="c0"
>
  <h2
    className="c1 c2"
  >
    Questions
  </h2>
  <div
    active={false}
    className="c3 c4"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    what?
  </div>
  <div
    active={false}
    className="c3 c4"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    who?
  </div>
  <div
    active={false}
    className="c3 c4"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    where?
  </div>
</div>
`;

exports[`MenuGroup - labelProps & labelStyles 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4C535B;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.c4:focus {
  box-shadow: 0 0 .25rem 0.125rem #49a9f2;
  outline: none;
}

.c4:active {
  color: #0087e1;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  box-shadow: 0 4px 8px -2px #DEE1E5;
  background-color: white;
  font-size: 1.5625rem;
  font-weight: 600;
  line-height: 2.5rem;
  position: -webkit-sticky;
  position: sticky;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  top: 0;
  z-index: 1;
}

.c1 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: uppercase;
}

.c3 {
  position: relative;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c3:hover {
  background: #F5F6F7;
  color: #262D33;
}

.c3:hover .c5 {
  color: #262D33;
}

.c3 .c5 {
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c3 .c5 {
  color: #C1C6CC;
}

<div
  className="c0"
>
  <h2
    className="c1 c2"
    style={
      Object {
        "color": "rebeccapurple",
      }
    }
  >
    Questions
  </h2>
  <div
    active={false}
    className="c3 c4"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    what?
  </div>
  <div
    active={false}
    className="c3 c4"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    who?
  </div>
  <div
    active={false}
    className="c3 c4"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    where?
  </div>
</div>
`;

exports[`MenuGroup 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4C535B;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.c2:focus {
  box-shadow: 0 0 .25rem 0.125rem #49a9f2;
  outline: none;
}

.c2:active {
  color: #0087e1;
}

.c1 {
  position: relative;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c1:hover {
  background: #F5F6F7;
  color: #262D33;
}

.c1:hover .c3 {
  color: #262D33;
}

.c1 .c3 {
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c1 .c3 {
  color: #C1C6CC;
}

<div
  className="c0"
>
  <div
    active={false}
    className="c1 c2"
    current={false}
    currentMarker={false}
    customizationProps={
      Object {
        "activated": Object {
          "color": "#0087e1",
          "icon": Object {
            "color": "#0087e1",
          },
        },
        "bg": "#FFFFFF",
        "color": "#4C535B",
        "current": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "hover": Object {
          "bg": "#F5F6F7",
          "color": "#262D33",
          "icon": Object {
            "color": "#262D33",
          },
        },
        "icon": Object {
          "color": "#C1C6CC",
          "size": 20,
        },
        "marker": Object {
          "color": "#262D33",
          "size": 4,
        },
      }
    }
    onClick={[Function]}
    style={
      Object {
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    who!
  </div>
</div>
`;
